--- a/E_commerce/templates/account_orders.html
+++ b/E_commerce/templates/account_orders.html
@@ -1,29 +1,31 @@
-﻿{%load static%}
+﻿{% extends 'base.html'%}
+{% load static %}
+{% block content %}
 <!doctype html>
 <html lang="en">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--favicon-->
-	<link rel="icon" href="assets/images/logo1.webp" type="image/webp">
-
-  <!-- CSS files -->
-  <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="../../../css2?family=Raleway:wght@500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../../../npm/bootstrap-icons%401.7.2/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-  <!-- Plugins -->
-  <link rel="stylesheet" type="text/css" href="assets/plugins/slick/slick.css">
-  <link rel="stylesheet" type="text/css" href="assets/plugins/slick/slick-theme.css">
-
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/css/dark-theme.css" rel="stylesheet">
-
-  <title>Shopingo - eCommerce HTML Template</title>
-</head>
-
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--favicon-->
+    <link rel="icon" href="{% static 'assets/images/logo1.webp' %}" type="image/webp">
+  
+    <!-- CSS files -->
+    <link href="{%static 'assets/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="../../../css2?family=Raleway:wght@500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../../../npm/bootstrap-icons%401.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- Plugins -->
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/plugins/slick/slick.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/plugins/slick/slick-theme.css' %}">
+  
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/dark-theme.css' %}" rel="stylesheet">
+  
+    <title>KassyandI</title>
+  </head>
+  
 <body>
 
   <!--page loader-->
@@ -39,7 +41,7 @@
   <!--start top header-->
   <header class="top-header">
     <nav class="navbar navbar-expand-xl w-100 navbar-dark container gap-3">
-      <a class="navbar-brand d-none d-xl-inline" href="index.html"><img src="assets/images/logo1.webp" class="logo-img" alt=""></a>
+      <a class="navbar-brand d-none d-xl-inline" href="{% url 'index' %}"><img src="assets/images/logo1.webp" class="logo-img" alt=""></a>
       <a class="mobile-menu-btn d-inline d-xl-none" href="javascript:;" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
         <i class="bi bi-list"></i>
       </a>
@@ -52,7 +54,7 @@
         <div class="offcanvas-body primary-menu">
           <ul class="navbar-nav justify-content-start flex-grow-1 gap-1">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" href="tv-shows.html" data-bs-toggle="dropdown">
@@ -684,3 +686,4 @@
 </body>
 
 </html>
+{% endblock %}
