--- a/E_commerce/templates/account_orders.html
+++ b/E_commerce/templates/account_orders.html
@@ -121,16 +121,15 @@
                 Shop
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="cart.html">Shop Cart</a></li>
-                <li><a class="dropdown-item" href="wishlist.html">Wishlist</a></li>
-                <li><a class="dropdown-item" href="product-details.html">Product Details</a></li>
-                <li><a class="dropdown-item" href="payment-method.html">Payment Method</a></li>
-                <li><a class="dropdown-item" href="billing-details.html">Billing Details</a></li>
-                <li><a class="dropdown-item" href="address.html">Addresses</a></li>
-                <li><a class="dropdown-item" href="shop-grid.html">Shop Grid</a></li>
-                <li><a class="dropdown-item" href="shop-grid-type-4.html">Shop Grid 4</a></li>
-                <li><a class="dropdown-item" href="shop-grid-type-5.html">Shop Grid 5</a></li>
-                <li><a class="dropdown-item" href="search.html">Search</a></li>
+                <li><a class="dropdown-item" href="{%url 'cart' %}">Shop Cart</a></li>
+                <li><a class="dropdown-item" href="{%url 'wishlist' %}">Wishlist</a></li>
+                <li><a class="dropdown-item" href="{%url 'payment_method' %}">Payment Method</a></li>
+                <li><a class="dropdown-item" href="{%url 'billing_details' %}">Billing Details</a></li>
+                <li><a class="dropdown-item" href="{%url 'address' %}">Addresses</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid' %}">Shop Grid</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid_type_4' %}">Shop Grid 4</a></li>
+                <li><a class="dropdown-item" href="{%url 'shop_grid_type_5'%}">Shop Grid 5</a></li>
+                <li><a class="dropdown-item" href="{%url 'search' %}">Search</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -144,18 +143,22 @@
                 Account
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="account-dashboard.html">Dashboard</a></li>
-                <li><a class="dropdown-item" href="account-orders.html">My Orders</a></li>
-                <li><a class="dropdown-item" href="account-profile.html">My Profile</a></li>
-                <li><a class="dropdown-item" href="account-edit-profile.html">Edit Profile</a></li>
-                <li><a class="dropdown-item" href="account-saved-address.html">Addresses</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="authentication-login.html">Login</a></li>
-                <li><a class="dropdown-item" href="authentication-register.html">Register</a></li>
-                <li><a class="dropdown-item" href="authentication-reset-password.html">Password</a></li>
+                <li><a class="dropdown-item" href="{%url 'account_dashboard' %}">Dashboard</a></li>
+                <li><a class="dropdown-item" href="{%url 'account_orders' %}">My Orders</a></li>
+                <li><a class="dropdown-item" href="{%url 'account_profile'%}">My Profile</a></li>
+                <li><a class="dropdown-item" href="{%url 'account_edit'%}">Edit Profile</a></li>
+                <li><a class="dropdown-item" href="{%url 'address' %}">Addresses</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                {% if user.is_authenticated %}
+                <li><a class="dropdown-item" href="{%url 'logout_user' %}">Logout</a></li>
+                {% else %}
+                <li><a class="dropdown-item" href="{%url 'authentication_login' %}">Login</a></li>
+                <li><a class="dropdown-item" href="{%url 'signup_user' %}">Register</a></li>
+                {% endif %}
+                <li><a class="dropdown-item" href="{%url 'authentication_reset_password'%}">Password</a></li>
               </ul>
-            </li>
-          </ul>
         </div>
       </div>
       <ul class="navbar-nav secondary-menu flex-row">
@@ -167,20 +170,21 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="search.html"><i class="bi bi-search"></i></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="wishlist.html"><i class="bi bi-suit-heart"></i></a>
-        </li>
-        <li class="nav-item" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight">
-          <a class="nav-link position-relative" href="javascript:;">
-            <div class="cart-badge">8</div>
-            <i class="bi bi-basket2"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="account-dashboard.html"><i class="bi bi-person-circle"></i></a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'search' %}"><i class="bi bi-search"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'wishlist' %}"><i class="bi bi-suit-heart"></i></a>
+          </li>
+          <li class="nav-item" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight">
+            <a class="nav-link position-relative" href="javascript:;">
+              <div class="cart-badge">8</div>
+              <i class="bi bi-basket2"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'account_dashboard'%}"><i class="bi bi-person-circle"></i></a>
+          </li>
       </ul>
     </nav>
   </header>
@@ -196,7 +200,7 @@
     <div class="container">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb mb-0"> 
-          <li class="breadcrumb-item"><a href="javascript:;">Home</a></li>
+          <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
           <li class="breadcrumb-item"><a href="javascript:;">Shop</a></li>
           <li class="breadcrumb-item active" aria-current="page">Shop With Grid</li>
         </ol>
