--- a/E_commerce/templates/base.html
+++ b/E_commerce/templates/base.html
@@ -139,7 +139,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{%url 'account_dashboard' %}">Dashboard</a></li>
-                <li><a class="dropdown-item" href="#">My Orders</a></li>
+                <li><a class="dropdown-item" href="{%url 'account_orders' %}">My Orders</a></li>
                 <li><a class="dropdown-item" href="{%url 'account_profile'%}">My Profile</a></li>
                 <li><a class="dropdown-item" href="{%url 'account_edit'%}">Edit Profile</a></li>
                 <li><a class="dropdown-item" href="{%url 'address' %}">Addresses</a></li>
